# Vain

./: CMakeLists.txt
cmake/: GenerateShaderCPPFile.cmake  ShaderCompile.cmake
engine/: CMakeLists.txt
engine/asset/global/: global_render_desc.json
engine/asset/object/: robot_operator.object.json
engine/config/: VainEditor.ini
engine/shader/: CMakeLists.txt  combine_ui.frag  deferred_light.frag  deferred_light.vert  mesh.frag  mesh.vert  mesh_directional_light_shadow.frag  mesh_directional_light_shadow.vert  mesh_gbuffer.frag  mesh_point_light_shadow.frag  mesh_point_light_shadow.geom  mesh_point_light_shadow.vert  post_process.vert  skybox.frag  skybox.vert  tone_mapping.frag
engine/shader/inc/: constants.h  gbuffer.h  mesh_lighting.h  mesh_lighting.inl  structure.h
engine/source/editor/: CMakeLists.txt  editor.cpp  editor.h  editor_file_service.cpp  editor_file_service.h  editor_global_context.cpp  editor_global_context.h  editor_input_manager.cpp  editor_input_manager.h  editor_scene_manager.cpp  editor_scene_manager.h  editor_ui.cpp  editor_ui.h  main.cpp
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: hash.h  macro.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: aabb.cpp  aabb.h  frustum.cpp  frustum.h  transform.cpp  transform.h
engine/source/runtime/core/meta/: auto_register.cpp  auto_register.h
engine/source/runtime/core/serializer/: serializer.cpp  serializer.h
engine/source/runtime/core/vulkan/: vulkan_context.cpp  vulkan_context.h  vulkan_utils.cpp  vulkan_utils.h
engine/source/runtime/function/framework/: object_id.cpp  object_id.h  world_manager.cpp  world_manager.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/render/: render_camera.cpp  render_camera.h  render_data.cpp  render_data.h  render_entity.cpp  render_entity.h  render_object.cpp  render_object.h  render_pass.cpp  render_pass.h  render_resource.cpp  render_resource.h  render_scene.cpp  render_scene.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.cpp  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/passes/: combine_ui_pass.cpp  combine_ui_pass.h  directional_light_pass.cpp  directional_light_pass.h  main_pass.cpp  main_pass.h  point_light_pass.cpp  point_light_pass.h  tone_mapping_pass.cpp  tone_mapping_pass.h  ui_pass.cpp  ui_pass.h
engine/source/runtime/function/render/ui/: window_ui.cpp  window_ui.h
engine/source/runtime/resource/: asset_guid_allocator.h  asset_manager.cpp  asset_manager.h  asset_type.cpp  asset_type.h  config_manager.cpp  config_manager.h
